fixed responsiveness on mobile screens partially

--- a/assets/scss/typography/_base.scss
+++ b/assets/scss/typography/_base.scss
@@ -1,6 +1,8 @@
 /* Typography */
 
-html {font-size: 125%;} /*20px*/
+html {
+  font-size: 125%;
+} /*20px*/
 
 body {
   font-family: 'Sen', sans-serif;
@@ -36,6 +38,26 @@ h4 {font-size: 2.25rem;}
 h5 {font-size: 1.5rem;}
 
 small, .text_small {font-size: 0.667rem;}
+
+@media screen and (max-width: 39.9375em) {
+  html {
+    font-size: 100%;
+  }
+  h1 {
+    margin-top: 0;
+    font-size: 3.052rem;
+  }
+  
+  h2 {font-size: 2.441rem;}
+  
+  h3 {font-size: 1.953rem;}
+  
+  h4 {font-size: 1.563rem;}
+  
+  h5 {font-size: 1.25rem;}
+  
+  small, .text_small {font-size: 0.8rem;}
+}
 
 ul {
     list-style: inherit;
